--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,18 @@ dependencies:
   cupertino_icons: ^1.0.2
   english_words: ^4.0.0
   camera: ^0.10.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  uuid: ^3.0.6
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.2.0
+  json_serializable: ^6.3.1
+  hive_generator: ^1.1.3
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
